Fixed spacing of sidenav.  Fixed navigation highlighting

--- a/src/app/documentation/documentation-side-navigation/documentation-area/documentation-area.component.scss
+++ b/src/app/documentation/documentation-side-navigation/documentation-area/documentation-area.component.scss
@@ -9,6 +9,12 @@
 
     section.nav-group {
 
+        margin-top: .5rem;
+
+        label {
+            margin-bottom:0px;
+        }
+
         button {
             margin-top: -1px;
         }
